// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query Interface Should convert Aliased CTE select sql (WITH nums AS (SELECT id, numeric_col AS "num" FROM all_types)
      SELECT all_types.id, n.num FROM all_types JOIN nums AS n ON n.id = all_types.id) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "id",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "num",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "numeric",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert Coalesce binary expression sql (SELECT COALESCE(numeric_col,0) + COALESCE(numeric_col,0) as "totalPaymentWithVat" FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "totalPaymentWithVat",
      "type": {
        "postgresType": "float4",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert Right function sql (SELECT RIGHT('123', 2)) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "right",
      "type": {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "text",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert Select with aggregate functions sql (SELECT
        ARRAY_AGG(
          jsonb_build_object(
            'id', transactions.id,
            'balance', calculate_account_balance(transactions.account_id, transactions.sent_at)
          )
        )
      FROM transactions) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "?column?",
      "type": {
        "items": {
          "items": [
            {
              "name": "id",
              "type": {
                "comment": undefined,
                "generated": false,
                "postgresDescription": undefined,
                "postgresType": "uuid",
                "type": 2,
              },
            },
            {
              "name": "balance",
              "type": {
                "comment": undefined,
                "generated": undefined,
                "postgresDescription": undefined,
                "postgresType": "integer",
                "type": 3,
              },
            },
          ],
          "postgresType": "json",
          "type": 13,
        },
        "postgresType": "json[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert Select with function sql (SELECT transactions.id, calculate_account_balance(transactions.account_id, transactions.sent_at) FROM transactions) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "id",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "uuid",
        "type": 2,
      },
    },
    {
      "name": "calculate_account_balance",
      "type": {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert Sql function sql (SELECT calculate_account_balance($accountId!::int, $sentAt!::timestamp)) 1`] = `
{
  "params": [
    {
      "accessor": undefined,
      "name": "accountId",
      "type": {
        "nullable": false,
        "postgresType": "any",
        "type": 14,
        "value": {
          "postgresType": "int4",
          "type": 3,
        },
      },
    },
    {
      "accessor": undefined,
      "name": "sentAt",
      "type": {
        "nullable": false,
        "postgresType": "any",
        "type": 14,
        "value": {
          "postgresType": "timestamp",
          "type": 6,
        },
      },
    },
  ],
  "results": [
    {
      "name": "calculate_account_balance",
      "type": {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert array column item sql (SELECT static_arr[1] AS one_item FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "one_item",
      "type": {
        "comment": undefined,
        "nullable": true,
        "postgresType": "int8",
        "type": 4,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert array constructor sql (SELECT ARRAY(SELECT json_build_object('test', other.integer_col) FROM all_types AS other WHERE all_types.id = other.id) as "arr" FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "arr",
      "type": {
        "items": {
          "nullable": true,
          "postgresType": "json",
          "type": 14,
          "value": {
            "items": [
              {
                "name": "test",
                "type": {
                  "comment": undefined,
                  "generated": false,
                  "nullable": true,
                  "postgresDescription": undefined,
                  "postgresType": "integer",
                  "type": 3,
                },
              },
            ],
            "postgresType": "json",
            "type": 13,
          },
        },
        "postgresType": "json[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert array of records index composite column enum sql (SELECT (transactions.history[1]).state FROM transactions) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "state",
      "type": {
        "comment": undefined,
        "items": [
          {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Approved",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Rejected",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Failed",
            "postgresType": "text",
            "type": 2,
          },
        ],
        "nullable": true,
        "postgresType": "transaction_state",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert array of records index composite column int sql (SELECT (transactions.history[1]).user_id FROM transactions) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "user_id",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert array of records index sql (SELECT transactions.history[1] FROM transactions) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "history",
      "type": {
        "attributes": {
          "date_on": {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "timestamp without time zone",
            "type": 6,
          },
          "description": {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "character varying",
            "type": 2,
          },
          "state": {
            "comment": undefined,
            "items": [
              {
                "literal": "Pending",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Approved",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Rejected",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Failed",
                "postgresType": "text",
                "type": 2,
              },
            ],
            "nullable": true,
            "postgresType": "transaction_state",
            "type": 12,
          },
          "user_id": {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
        },
        "comment": undefined,
        "name": "transaction_history",
        "nullable": true,
        "postgresType": "transaction_history",
        "schema": "public",
        "type": 10,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert array of records sql (SELECT transactions.history FROM transactions) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "history",
      "type": {
        "comment": undefined,
        "items": {
          "attributes": {
            "date_on": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "timestamp without time zone",
              "type": 6,
            },
            "description": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "character varying",
              "type": 2,
            },
            "state": {
              "comment": undefined,
              "items": [
                {
                  "literal": "Pending",
                  "postgresType": "text",
                  "type": 2,
                },
                {
                  "literal": "Approved",
                  "postgresType": "text",
                  "type": 2,
                },
                {
                  "literal": "Rejected",
                  "postgresType": "text",
                  "type": 2,
                },
                {
                  "literal": "Failed",
                  "postgresType": "text",
                  "type": 2,
                },
              ],
              "nullable": true,
              "postgresType": "transaction_state",
              "type": 12,
            },
            "user_id": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "integer",
              "type": 3,
            },
          },
          "name": "transaction_history",
          "postgresType": "transaction_history",
          "schema": "public",
          "type": 10,
        },
        "nullable": true,
        "postgresType": "transaction_history[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 1 sql (SELECT COALESCE(id, character_col) FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "coalesce",
      "type": {
        "items": [
          {
            "comment": undefined,
            "generated": false,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
          {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "character",
            "type": 2,
          },
        ],
        "nullable": false,
        "postgresType": "any",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 2 sql (SELECT COALESCE(character_col, id) FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "coalesce",
      "type": {
        "items": [
          {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "character",
            "type": 2,
          },
          {
            "comment": undefined,
            "generated": false,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
        ],
        "nullable": false,
        "postgresType": "any",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 3 sql (SELECT COALESCE(12, character_col, id) FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "coalesce",
      "type": {
        "items": [
          {
            "literal": 12,
            "postgresType": "float4",
            "type": 3,
          },
          {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "character",
            "type": 2,
          },
          {
            "comment": undefined,
            "generated": false,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
        ],
        "nullable": false,
        "postgresType": "any",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 4 sql (SELECT COALESCE(integer_col, character_col) FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "coalesce",
      "type": {
        "items": [
          {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
          {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "character",
            "type": 2,
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert composite array column sql (SELECT item_arr FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "item_arr",
      "type": {
        "comment": undefined,
        "items": {
          "attributes": {
            "name": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "text",
              "type": 2,
            },
            "price": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "numeric",
              "type": 3,
            },
            "supplier_id": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "integer",
              "type": 3,
            },
          },
          "name": "inventory_item",
          "postgresType": "inventory_item",
          "schema": "public",
          "type": 10,
        },
        "nullable": true,
        "postgresType": "inventory_item[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert composite array const sql (SELECT '{}'::inventory_item[]) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "array",
      "type": {
        "items": {
          "attributes": {
            "name": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "text",
              "type": 2,
            },
            "price": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "numeric",
              "type": 3,
            },
            "supplier_id": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "integer",
              "type": 3,
            },
          },
          "name": "inventory_item",
          "postgresType": "inventory_item",
          "schema": undefined,
          "type": 10,
        },
        "postgresType": "inventory_item[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert composite type from table sql (SELECT (item).supplier_id FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "supplier_id",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert composite type from view sql (SELECT (item).supplier_id FROM all_types_view) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "supplier_id",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert count distinct sql (SELECT COUNT(DISTINCT id) FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "count",
      "type": {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert date column inside json_build_object sql (SELECT json_build_object('dateOn', date_col) FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "?column?",
      "type": {
        "items": [
          {
            "name": "dateOn",
            "type": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "date",
              "type": 2,
            },
          },
        ],
        "postgresType": "json",
        "type": 13,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert date literal inside json_build_object sql (SELECT json_build_object('dateOn', '2022-01-01'::date, 'timestamp', '2022-01-01'::timestamp)) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "?column?",
      "type": {
        "items": [
          {
            "name": "dateOn",
            "type": {
              "postgresType": "date",
              "type": 2,
            },
          },
          {
            "name": "timestamp",
            "type": {
              "postgresType": "timestamp",
              "type": 2,
            },
          },
        ],
        "postgresType": "json",
        "type": 13,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert different result types for returning sql (UPDATE all_types SET id = 1 RETURNING *) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "id",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "not_null",
      "type": {
        "comment": "This column should never be null",
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "default_not_null",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "bigint_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
    {
      "name": "bigserial_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
    {
      "name": "bit_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bit",
        "type": 2,
      },
    },
    {
      "name": "bit_varying_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bit varying",
        "type": 2,
      },
    },
    {
      "name": "boolean_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "boolean",
        "type": 5,
      },
    },
    {
      "name": "box_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "box",
        "type": 2,
      },
    },
    {
      "name": "bytea_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "bytea",
        "type": 0,
      },
    },
    {
      "name": "character_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
    {
      "name": "character_varying_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character varying",
        "type": 2,
      },
    },
    {
      "name": "cidr_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "cidr",
        "type": 2,
      },
    },
    {
      "name": "circle_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "items": [
          {
            "name": "x",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "y",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "radius",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "circle",
        "type": 13,
      },
    },
    {
      "name": "date_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "date",
        "type": 6,
      },
    },
    {
      "name": "double_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "double precision",
        "type": 3,
      },
    },
    {
      "name": "inet_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "inet",
        "type": 2,
      },
    },
    {
      "name": "integer_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "interval_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "items": [
          {
            "name": "years",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "months",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "days",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "hours",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "minutes",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "seconds",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "milliseconds",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "interval",
        "type": 13,
      },
    },
    {
      "name": "json_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "json",
        "type": 8,
      },
    },
    {
      "name": "jsonb_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "jsonb",
        "type": 8,
      },
    },
    {
      "name": "line_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "line",
        "type": 2,
      },
    },
    {
      "name": "lseg_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "lseg",
        "type": 2,
      },
    },
    {
      "name": "macaddr_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "macaddr",
        "type": 2,
      },
    },
    {
      "name": "money_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "money",
        "type": 2,
      },
    },
    {
      "name": "numeric_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "numeric",
        "type": 3,
      },
    },
    {
      "name": "path_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "path",
        "type": 2,
      },
    },
    {
      "name": "pg_lsn_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "pg_lsn",
        "type": 2,
      },
    },
    {
      "name": "point_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "items": [
          {
            "name": "x",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "y",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "point",
        "type": 13,
      },
    },
    {
      "name": "polygon_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "polygon",
        "type": 2,
      },
    },
    {
      "name": "real_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "real",
        "type": 3,
      },
    },
    {
      "name": "smallint_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "smallint",
        "type": 3,
      },
    },
    {
      "name": "smallserial_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "smallint",
        "type": 3,
      },
    },
    {
      "name": "serial_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "text_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "text",
        "type": 2,
      },
    },
    {
      "name": "time_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "time without time zone",
        "type": 2,
      },
    },
    {
      "name": "time_with_time_zone_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "time with time zone",
        "type": 6,
      },
    },
    {
      "name": "timestamp_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "timestamp without time zone",
        "type": 6,
      },
    },
    {
      "name": "timestamp_with_time_zone_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "timestamp with time zone",
        "type": 6,
      },
    },
    {
      "name": "tsquery_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "tsquery",
        "type": 2,
      },
    },
    {
      "name": "tsvector_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "tsvector",
        "type": 2,
      },
    },
    {
      "name": "txid_snapshot_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "txid_snapshot",
        "type": 2,
      },
    },
    {
      "name": "uuid_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "uuid",
        "type": 2,
      },
    },
    {
      "name": "xml_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "xml",
        "type": 2,
      },
    },
    {
      "name": "item",
      "type": {
        "attributes": {
          "name": {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "text",
            "type": 2,
          },
          "price": {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "numeric",
            "type": 3,
          },
          "supplier_id": {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
        },
        "name": "inventory_item",
        "postgresType": "inventory_item",
        "schema": "public",
        "type": 10,
      },
    },
    {
      "name": "state",
      "type": {
        "comment": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
        "items": [
          {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
        ],
        "nullable": true,
        "postgresType": "account_state",
        "type": 12,
      },
    },
    {
      "name": "state_arr",
      "type": {
        "comment": undefined,
        "items": {
          "items": [
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
          ],
          "postgresType": "account_state",
          "type": 12,
        },
        "nullable": true,
        "postgresType": "account_state[]",
        "type": 11,
      },
    },
    {
      "name": "item_arr",
      "type": {
        "comment": undefined,
        "items": {
          "attributes": {
            "name": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "text",
              "type": 2,
            },
            "price": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "numeric",
              "type": 3,
            },
            "supplier_id": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "integer",
              "type": 3,
            },
          },
          "name": "inventory_item",
          "postgresType": "inventory_item",
          "schema": "public",
          "type": 10,
        },
        "nullable": true,
        "postgresType": "inventory_item[]",
        "type": 11,
      },
    },
    {
      "name": "static_arr",
      "type": {
        "comment": undefined,
        "items": {
          "postgresType": "int8",
          "type": 4,
        },
        "nullable": true,
        "postgresType": "int8[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert different result types sql (SELECT * FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "id",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "not_null",
      "type": {
        "comment": "This column should never be null",
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "default_not_null",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "bigint_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
    {
      "name": "bigserial_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
    {
      "name": "bit_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bit",
        "type": 2,
      },
    },
    {
      "name": "bit_varying_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bit varying",
        "type": 2,
      },
    },
    {
      "name": "boolean_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "boolean",
        "type": 5,
      },
    },
    {
      "name": "box_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "box",
        "type": 2,
      },
    },
    {
      "name": "bytea_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "bytea",
        "type": 0,
      },
    },
    {
      "name": "character_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
    {
      "name": "character_varying_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character varying",
        "type": 2,
      },
    },
    {
      "name": "cidr_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "cidr",
        "type": 2,
      },
    },
    {
      "name": "circle_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "items": [
          {
            "name": "x",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "y",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "radius",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "circle",
        "type": 13,
      },
    },
    {
      "name": "date_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "date",
        "type": 6,
      },
    },
    {
      "name": "double_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "double precision",
        "type": 3,
      },
    },
    {
      "name": "inet_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "inet",
        "type": 2,
      },
    },
    {
      "name": "integer_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "interval_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "items": [
          {
            "name": "years",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "months",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "days",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "hours",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "minutes",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "seconds",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "milliseconds",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "interval",
        "type": 13,
      },
    },
    {
      "name": "json_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "json",
        "type": 8,
      },
    },
    {
      "name": "jsonb_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "jsonb",
        "type": 8,
      },
    },
    {
      "name": "line_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "line",
        "type": 2,
      },
    },
    {
      "name": "lseg_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "lseg",
        "type": 2,
      },
    },
    {
      "name": "macaddr_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "macaddr",
        "type": 2,
      },
    },
    {
      "name": "money_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "money",
        "type": 2,
      },
    },
    {
      "name": "numeric_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "numeric",
        "type": 3,
      },
    },
    {
      "name": "path_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "path",
        "type": 2,
      },
    },
    {
      "name": "pg_lsn_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "pg_lsn",
        "type": 2,
      },
    },
    {
      "name": "point_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "items": [
          {
            "name": "x",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "y",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "point",
        "type": 13,
      },
    },
    {
      "name": "polygon_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "polygon",
        "type": 2,
      },
    },
    {
      "name": "real_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "real",
        "type": 3,
      },
    },
    {
      "name": "smallint_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "smallint",
        "type": 3,
      },
    },
    {
      "name": "smallserial_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "smallint",
        "type": 3,
      },
    },
    {
      "name": "serial_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "text_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "text",
        "type": 2,
      },
    },
    {
      "name": "time_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "time without time zone",
        "type": 2,
      },
    },
    {
      "name": "time_with_time_zone_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "time with time zone",
        "type": 6,
      },
    },
    {
      "name": "timestamp_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "timestamp without time zone",
        "type": 6,
      },
    },
    {
      "name": "timestamp_with_time_zone_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "timestamp with time zone",
        "type": 6,
      },
    },
    {
      "name": "tsquery_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "tsquery",
        "type": 2,
      },
    },
    {
      "name": "tsvector_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "tsvector",
        "type": 2,
      },
    },
    {
      "name": "txid_snapshot_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "txid_snapshot",
        "type": 2,
      },
    },
    {
      "name": "uuid_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "uuid",
        "type": 2,
      },
    },
    {
      "name": "xml_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "xml",
        "type": 2,
      },
    },
    {
      "name": "item",
      "type": {
        "attributes": {
          "name": {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "text",
            "type": 2,
          },
          "price": {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "numeric",
            "type": 3,
          },
          "supplier_id": {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
        },
        "name": "inventory_item",
        "postgresType": "inventory_item",
        "schema": "public",
        "type": 10,
      },
    },
    {
      "name": "state",
      "type": {
        "comment": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
        "items": [
          {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
        ],
        "nullable": true,
        "postgresType": "account_state",
        "type": 12,
      },
    },
    {
      "name": "state_arr",
      "type": {
        "comment": undefined,
        "items": {
          "items": [
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
          ],
          "postgresType": "account_state",
          "type": 12,
        },
        "nullable": true,
        "postgresType": "account_state[]",
        "type": 11,
      },
    },
    {
      "name": "item_arr",
      "type": {
        "comment": undefined,
        "items": {
          "attributes": {
            "name": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "text",
              "type": 2,
            },
            "price": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "numeric",
              "type": 3,
            },
            "supplier_id": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "integer",
              "type": 3,
            },
          },
          "name": "inventory_item",
          "postgresType": "inventory_item",
          "schema": "public",
          "type": 10,
        },
        "nullable": true,
        "postgresType": "inventory_item[]",
        "type": 11,
      },
    },
    {
      "name": "static_arr",
      "type": {
        "comment": undefined,
        "items": {
          "postgresType": "int8",
          "type": 4,
        },
        "nullable": true,
        "postgresType": "int8[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert empty array const sql (SELECT ARRAY[]) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "array",
      "type": {
        "items": {
          "items": [],
          "postgresType": "any",
          "type": 12,
        },
        "postgresType": "any[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum array column sql (SELECT state_arr FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "state_arr",
      "type": {
        "comment": undefined,
        "items": {
          "items": [
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
          ],
          "postgresType": "account_state",
          "type": 12,
        },
        "nullable": true,
        "postgresType": "account_state[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum array const sql (SELECT ARRAY[]::account_levelisation_state[]) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "array",
      "type": {
        "items": {
          "items": [
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Done",
              "postgresType": "text",
              "type": 2,
            },
          ],
          "postgresType": "account_levelisation_state",
          "type": 12,
        },
        "postgresType": "account_levelisation_state[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum array insert sql (INSERT INTO all_types (not_null, state_arr) VALUES (1, $state) RETURNING state_arr) 1`] = `
{
  "params": [
    {
      "accessor": undefined,
      "name": "state",
      "type": {
        "nullable": true,
        "postgresType": "any",
        "type": 14,
        "value": {
          "comment": undefined,
          "items": {
            "items": [
              {
                "literal": "Active",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Active",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Active",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Pending",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Pending",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Pending",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Dispute",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Dispute",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Dispute",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Closed",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Closed",
                "postgresType": "text",
                "type": 2,
              },
              {
                "literal": "Closed",
                "postgresType": "text",
                "type": 2,
              },
            ],
            "postgresType": "account_state",
            "type": 12,
          },
          "nullable": true,
          "postgresType": "account_state[]",
          "type": 11,
        },
      },
    },
  ],
  "results": [
    {
      "name": "state_arr",
      "type": {
        "comment": undefined,
        "items": {
          "items": [
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
          ],
          "postgresType": "account_state",
          "type": 12,
        },
        "nullable": true,
        "postgresType": "account_state[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum column sql (SELECT state FROM account_levelisations) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "state",
      "type": {
        "comment": undefined,
        "items": [
          {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Done",
            "postgresType": "text",
            "type": 2,
          },
        ],
        "nullable": false,
        "postgresType": "account_levelisation_state",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum sql (SELECT 'Pending'::account_levelisation_state) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "row",
      "type": {
        "items": [
          {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Done",
            "postgresType": "text",
            "type": 2,
          },
        ],
        "postgresType": "account_levelisation_state",
        "type": 12,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert function result double sql (SELECT ABS(ABS(integer_col)) FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "abs",
      "type": {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "double precision",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert function result single sql (SELECT ABS(integer_col) FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "abs",
      "type": {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "double precision",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert nested function explicit type sql (SELECT ARRAY_LENGTH(ARRAY_AGG(integer_col), 1)::int[] FROM all_types GROUP BY id) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "array",
      "type": {
        "items": {
          "postgresType": "int4",
          "type": 3,
        },
        "postgresType": "int4[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert nested function guess type sql (SELECT ABS(ARRAY_LENGTH(ARRAY_AGG(integer_col), 1)) FROM all_types GROUP BY id) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "abs",
      "type": {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "double precision",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert operators integer sql (SELECT integer_col + integer_col AS "test1" FROM all_types WHERE id = $id) 1`] = `
{
  "params": [
    {
      "accessor": undefined,
      "name": "id",
      "type": {
        "nullable": true,
        "postgresType": "any",
        "type": 14,
        "value": {
          "comment": undefined,
          "generated": false,
          "postgresDescription": undefined,
          "postgresType": "integer",
          "type": 3,
        },
      },
    },
  ],
  "results": [
    {
      "name": "test1",
      "type": {
        "nullable": true,
        "postgresType": "float4",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert operators string sql (SELECT character_col + integer_col AS "test1" FROM all_types WHERE character_col = $text) 1`] = `
{
  "params": [
    {
      "accessor": undefined,
      "name": "text",
      "type": {
        "nullable": true,
        "postgresType": "any",
        "type": 14,
        "value": {
          "comment": undefined,
          "generated": false,
          "nullable": true,
          "postgresDescription": undefined,
          "postgresType": "character",
          "type": 2,
        },
      },
    },
  ],
  "results": [
    {
      "name": "test1",
      "type": {
        "nullable": true,
        "postgresType": "float4",
        "type": 3,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert parameter coalesce sql (SELECT character_col FROM all_types WHERE integer_col > COALESCE($id, 2)) 1`] = `
{
  "params": [
    {
      "accessor": undefined,
      "name": "id",
      "type": {
        "nullable": true,
        "postgresType": "any",
        "type": 14,
        "value": {
          "comment": undefined,
          "generated": false,
          "nullable": true,
          "postgresDescription": undefined,
          "postgresType": "integer",
          "type": 3,
        },
      },
    },
  ],
  "results": [
    {
      "name": "character_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert parameter required sql (SELECT character_col FROM all_types WHERE integer_col > $id!) 1`] = `
{
  "params": [
    {
      "accessor": undefined,
      "name": "id",
      "type": {
        "nullable": false,
        "postgresType": "any",
        "type": 14,
        "value": {
          "comment": undefined,
          "generated": false,
          "nullable": true,
          "postgresDescription": undefined,
          "postgresType": "integer",
          "type": 3,
        },
      },
    },
  ],
  "results": [
    {
      "name": "character_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert select where sql (SELECT character_col FROM all_types WHERE integer_col > COALESCE($id, 2)) 1`] = `
{
  "params": [
    {
      "accessor": undefined,
      "name": "id",
      "type": {
        "nullable": true,
        "postgresType": "any",
        "type": 14,
        "value": {
          "comment": undefined,
          "generated": false,
          "nullable": true,
          "postgresDescription": undefined,
          "postgresType": "integer",
          "type": 3,
        },
      },
    },
  ],
  "results": [
    {
      "name": "character_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert simple sql (SELECT id, character_col FROM all_types WHERE id = :id) 1`] = `
{
  "params": [
    {
      "accessor": undefined,
      "name": "id",
      "type": {
        "nullable": true,
        "postgresType": "any",
        "type": 14,
        "value": {
          "comment": undefined,
          "generated": false,
          "postgresDescription": undefined,
          "postgresType": "integer",
          "type": 3,
        },
      },
    },
  ],
  "results": [
    {
      "name": "id",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "character_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert static array column sql (SELECT static_arr FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "static_arr",
      "type": {
        "comment": undefined,
        "items": {
          "postgresType": "int8",
          "type": 4,
        },
        "nullable": true,
        "postgresType": "int8[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert static array const sql (SELECT '{}'::bigint[]) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "array",
      "type": {
        "items": {
          "postgresType": "int8",
          "type": 4,
        },
        "postgresType": "int8[]",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert sum sql (SELECT SUM(integer_col) FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "sum",
      "type": {
        "comment": undefined,
        "generated": undefined,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
  ],
}
`;

exports[`Query Interface Should convert views types sql (SELECT * FROM all_types_view) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "id",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "not_null",
      "type": {
        "comment": "This column should never be null",
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "default_not_null",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "bigint_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
    {
      "name": "bigserial_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "bigint",
        "type": 4,
      },
    },
    {
      "name": "bit_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bit",
        "type": 2,
      },
    },
    {
      "name": "bit_varying_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "bit varying",
        "type": 2,
      },
    },
    {
      "name": "boolean_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "boolean",
        "type": 5,
      },
    },
    {
      "name": "box_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "box",
        "type": 2,
      },
    },
    {
      "name": "bytea_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "bytea",
        "type": 0,
      },
    },
    {
      "name": "character_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character",
        "type": 2,
      },
    },
    {
      "name": "character_varying_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "character varying",
        "type": 2,
      },
    },
    {
      "name": "cidr_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "cidr",
        "type": 2,
      },
    },
    {
      "name": "circle_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "items": [
          {
            "name": "x",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "y",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "radius",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "circle",
        "type": 13,
      },
    },
    {
      "name": "date_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "date",
        "type": 6,
      },
    },
    {
      "name": "double_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "double precision",
        "type": 3,
      },
    },
    {
      "name": "inet_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "inet",
        "type": 2,
      },
    },
    {
      "name": "integer_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "interval_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "items": [
          {
            "name": "years",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "months",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "days",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "hours",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "minutes",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "seconds",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "milliseconds",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "interval",
        "type": 13,
      },
    },
    {
      "name": "json_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "json",
        "type": 8,
      },
    },
    {
      "name": "jsonb_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "jsonb",
        "type": 8,
      },
    },
    {
      "name": "line_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "line",
        "type": 2,
      },
    },
    {
      "name": "lseg_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "lseg",
        "type": 2,
      },
    },
    {
      "name": "macaddr_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "macaddr",
        "type": 2,
      },
    },
    {
      "name": "money_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "money",
        "type": 2,
      },
    },
    {
      "name": "numeric_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "numeric",
        "type": 3,
      },
    },
    {
      "name": "path_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "path",
        "type": 2,
      },
    },
    {
      "name": "pg_lsn_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "pg_lsn",
        "type": 2,
      },
    },
    {
      "name": "point_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "items": [
          {
            "name": "x",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
          {
            "name": "y",
            "type": {
              "postgresType": "float4",
              "type": 3,
            },
          },
        ],
        "postgresDescription": undefined,
        "postgresType": "point",
        "type": 13,
      },
    },
    {
      "name": "polygon_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "polygon",
        "type": 2,
      },
    },
    {
      "name": "real_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "real",
        "type": 3,
      },
    },
    {
      "name": "smallint_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "smallint",
        "type": 3,
      },
    },
    {
      "name": "smallserial_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "smallint",
        "type": 3,
      },
    },
    {
      "name": "serial_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "postgresDescription": undefined,
        "postgresType": "integer",
        "type": 3,
      },
    },
    {
      "name": "text_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "text",
        "type": 2,
      },
    },
    {
      "name": "time_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "time without time zone",
        "type": 2,
      },
    },
    {
      "name": "time_with_time_zone_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "time with time zone",
        "type": 6,
      },
    },
    {
      "name": "timestamp_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "timestamp without time zone",
        "type": 6,
      },
    },
    {
      "name": "timestamp_with_time_zone_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "timestamp with time zone",
        "type": 6,
      },
    },
    {
      "name": "tsquery_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "tsquery",
        "type": 2,
      },
    },
    {
      "name": "tsvector_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "tsvector",
        "type": 2,
      },
    },
    {
      "name": "txid_snapshot_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "txid_snapshot",
        "type": 2,
      },
    },
    {
      "name": "uuid_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "uuid",
        "type": 2,
      },
    },
    {
      "name": "xml_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "xml",
        "type": 2,
      },
    },
    {
      "name": "item",
      "type": {
        "attributes": {
          "name": {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "text",
            "type": 2,
          },
          "price": {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "numeric",
            "type": 3,
          },
          "supplier_id": {
            "comment": undefined,
            "generated": false,
            "nullable": true,
            "postgresDescription": undefined,
            "postgresType": "integer",
            "type": 3,
          },
        },
        "name": "inventory_item",
        "postgresType": "inventory_item",
        "schema": "public",
        "type": 10,
      },
    },
    {
      "name": "state",
      "type": {
        "comment": "
  This column is an enum.
  It also contains several lines:
    - line1
    - line2
",
        "items": [
          {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Active",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Pending",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Dispute",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
          {
            "literal": "Closed",
            "postgresType": "text",
            "type": 2,
          },
        ],
        "nullable": true,
        "postgresType": "account_state",
        "type": 12,
      },
    },
    {
      "name": "state_arr",
      "type": {
        "comment": undefined,
        "items": {
          "items": [
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Active",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Pending",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Dispute",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
            {
              "literal": "Closed",
              "postgresType": "text",
              "type": 2,
            },
          ],
          "postgresType": "account_state",
          "type": 12,
        },
        "nullable": true,
        "postgresType": "account_state[]",
        "type": 11,
      },
    },
    {
      "name": "item_arr",
      "type": {
        "comment": undefined,
        "items": {
          "attributes": {
            "name": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "text",
              "type": 2,
            },
            "price": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "numeric",
              "type": 3,
            },
            "supplier_id": {
              "comment": undefined,
              "generated": false,
              "nullable": true,
              "postgresDescription": undefined,
              "postgresType": "integer",
              "type": 3,
            },
          },
          "name": "inventory_item",
          "postgresType": "inventory_item",
          "schema": "public",
          "type": 10,
        },
        "nullable": true,
        "postgresType": "inventory_item[]",
        "type": 11,
      },
    },
    {
      "name": "static_arr",
      "type": {
        "comment": undefined,
        "items": {
          "postgresType": "int8",
          "type": 4,
        },
        "nullable": true,
        "postgresType": "int8[]",
        "type": 11,
      },
    },
  ],
}
`;
